--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.suishouji">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_avatar_asking"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -16,7 +19,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".CostActivity" />
-        <activity android:name=".AddAccountBookActivity"></activity>
+        <activity android:name=".AddAccountBookActivity" />
+        <activity android:name=".AddAccountBookDetailActivity">
+
+        </activity>
     </application>
 
 </manifest>
