--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:largeHeap="true"
         android:allowBackup="true"
+
         android:icon="@drawable/icon_avatar_asking"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -22,7 +24,10 @@
         <activity android:name=".activity.menu.AddAccountBookActivity" />
         <activity android:name=".activity.menu.AddAccountBookDetailActivity" />
         <activity android:name=".activity.menu.FaceBoardActivity" />
-        <activity android:name=".activity.menu.FaceBoardRecordActivity"></activity>
+        <activity android:name=".activity.menu.FaceBoardRecordActivity" />
+        <activity android:name=".activity.ChangeMainListActivity">
+
+        </activity>
     </application>
 
 </manifest>
